Fix overflow on tablets

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -66,6 +66,7 @@ section
   text-align: center
   padding-top: 100px
   padding-bottom: 90px
+  overflow: hidden
 
   &.inverted
     background: $brand-color
